# tfkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  MANIFEST.in  README.md  install.sh  linux-amd64.spec  main.py  project.yaml  pyproject.toml  test.py
.github/workflows/: main.yml  release.yml  test.yml
debug/: test_inspector-v2.py  test_inspector.py  test_parser.py
examples/: dev.tfvars  outputs.tf  providers.tf  stage.tfvars  terraform.tfvars  variables.tf
examples/main/: locals.tf  main.tf  prod.tfvars  providers.tf  stage.tfvars  variables.tf
examples/project/: data.tf  main.tf  outputs.tf  providers.tf  variables.tf
examples/simple/: main.tf
examples/unsed-project/: locals.tf  main.tf
src/tfkit/: __init__.py  __main__.py  cli.py
src/tfkit/analytics/: base.py  models.py
src/tfkit/analyzer/: converter.py  models.py  project.py  terraform_analyzer.py
src/tfkit/commands/: scan.py  utils.py  validate.py
src/tfkit/dependency/: __init__.py  base.py  models.py
src/tfkit/graph/: base.py  builder.py  models.py
src/tfkit/inspector/: analyzer.py  builder.py  graph.py  models.py  parser.py  resolver.py
src/tfkit/parser/: __init__.py  base.py  data_sources.py  dependency.py  models.py  modules.py  moved.py  outputs.py  providers.py  serializers.py  terraform_block.py  variables.py
src/tfkit/parser/strategies/: __init__.py  check.py  locals.py  modules.py  resources.py  terraform_block.py  variables.py
src/tfkit/renderer/: __init__.py  base.py  browser.py
src/tfkit/templates/: 3d-graph-template.html.j2  base_template.py  classic-template.html.j2  classic_template.py  dashboard-template.html.j2  dashboard_template.py  graph-template.html.j2  graph_template.py  template_factory.py  theme_manager.py
src/tfkit/validator/: models.py  rule_register.py  validator.py
src/tfkit/validator/rules/: __init__.py
src/tfkit/validator/rules/aws/: __init__.py  compute.py  security.py  tagging.py
src/tfkit/validator/rules/azure/: __init__.py  naming.py  security.py
src/tfkit/validator/rules/gcp/: __init__.py  security.py
src/tfkit/validator/rules/generic/: __init__.py  objects.py
src/tfkit/visualizer/: generator.py  graph_builder.py  html_generator.py
templates/: base.html.j2
tests/: test_analyzer.py  test_analyzer_models.py  test_cli.py  test_commands_scan.py  test_inspector-v2.py  test_inspector.py  test_templates.py
